--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,8 @@
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
+
+html{
+  background-color:aquamarine;
+  color: black
+}
